--- a/src/Kitchen/Kitchen.html
+++ b/src/Kitchen/Kitchen.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Kitchen</title>
-</head>
-<body>
-	<h1>Hello, it is {{kitchen}}!</h1>
-</body>
-</html>
+<a href="" ng-click="refresh()">refresh</a>
+<div class="row">
+    <div class="col s6">
+        <ul class="collection with-header">
+            <li class="collection-header red white-text">
+                <h4>Ordered</h4></li>
+            <li class="collection-item" ng-repeat="order in ordered track by $index">
+                <div class="row my-menu">
+                    <div class="col s6">{{ order.dish.name }} </div>
+                    <div class="col s6">
+                        <a ng-click="startCook(order, $index)" class="waves-effect waves-light btn">Start cook</a></div>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="col s6">
+        <ul class="collection with-header">
+            <li class="collection-header red white-text">
+                <h4>Cooking</h4></li>
+            <li class="collection-item" ng-repeat="order in cooking track by $index">
+                <div class="row my-menu">
+                    <div class="col s4">{{ order.dish.name }} </div>
+                    <div class="col s4">{{ order.state }} </div>
+                    <div class="col s4"><a ng-click="finishCook(order, $index)" class="waves-effect waves-light btn">Ready</a></div></div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</div>
