--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     <nav>
         <div class="nav-wrapper">
         <i class="material-icons left">surround_sound</i><i class="material-icons left">language</i><i class="material-icons left">settings_input_antenna</i>
-            <a href="#" class="brand-logo">Drone Space Cafe</a>
+            <a href="#!/" class="brand-logo">Drone Space Cafe</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#!/login">Login</a></li>
-                <li><a href="#!/mytable">MyTable</a></li>
                 <li><a href="#!/kitchen">Kitchen</a></li>
+                <li><a href="#!/login">Log Out</a></li>
             </ul>
         </div>
     </nav>
