kitchen-clear-all

--- a/src/Kitchen/Kitchen.html
+++ b/src/Kitchen/Kitchen.html
@@ -23,7 +23,7 @@
                 <div class="row my-menu">
                     <div class="col s6">
                         <h4>Cooking</h4></div>
-                    <div class="col s6"><a ng-click="clear()" class="btn yellow green-text">clear</a></div>
+                    <div class="col s6"><a ng-click="clear()" class="btn green yellow-text">clear</a></div>
                 </div>
             </li>
             <li class="collection-item" ng-repeat="order in cooking track by $index">
