--- a/src/Kitchen/Kitchen.html
+++ b/src/Kitchen/Kitchen.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row my-row">
     <div class="col s6">
         <ul class="collection with-header">
             <li class="collection-header red white-text">
