--- a/src/Login/Login.html
+++ b/src/Login/Login.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row my-row">
     <form class="col s6" ng-submit="login(user)">
         <div class="row">
             <div class="input-field col s9">
