--- a/src/MyTable/MyTable.html
+++ b/src/MyTable/MyTable.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row my-row">
     <div class="col s6">
         <h3>Put an order</h3>
         <menu-list ng-hide="hideMenu"></menu-list>
