--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <nav>
         <div class="nav-wrapper">
             <i class="material-icons left">surround_sound</i><i class="material-icons left">language</i><i class="material-icons left">settings_input_antenna</i>
-            <a href="#!/" class="brand-logo">Drone Space Cafe</a>
+            <a ng-href="#!/" class="brand-logo">Drone Space Cafe</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#!/mytable">My Table</a></li>
-                <li><a href="#!/kitchen">Kitchen</a></li>
-                <li><a href="#!/login">Log Out</a></li>
+                <li><a ng-href="#!/mytable">My Table</a></li>
+                <li><a ng-href="#!/kitchen">Kitchen</a></li>
+                <li><a ng-href="#!/login">Log Out</a></li>
             </ul>
         </div>
     </nav>
