refund-bugs-fixed

--- a/src/Menu/Menu.html
+++ b/src/Menu/Menu.html
@@ -6,7 +6,7 @@
             <div class="row my-menu">
                 <div class="col s3">{{ drink.name }} </div>
                 <div class="col s3">{{ drink.price }}</div>
-                <div class="col s3 credit" ng-class="{hidden: credit > drink.price}">add {{ drink.price - credit }} credits</div>
+                <div class="col s3 credit" ng-class="{hidden: credit >= drink.price}">add {{ drink.price - credit }} credits</div>
                 <div class="col s3">
                 <a href="" ng-click="putOrder(drink)" class="btn-floating waves-effect waves-light red secondary-content" ng-class="{disabled: credit < drink.price}"><i class="material-icons">add</i></a></div>
             </div>
@@ -19,7 +19,7 @@
             <div class="row my-menu">
                 <div class="col s3">{{ dish.name }}</div>
                 <div class="col s3">{{ dish.price }}</div>
-                <div class="col s3 credit" ng-class="{hidden: credit > dish.price}"> add {{ dish.price - credit }} credits</div>
+                <div class="col s3 credit" ng-class="{hidden: credit >= dish.price}"> add {{ dish.price - credit }} credits</div>
                 <div class="col s3"><a href="" ng-click="putOrder(dish)" class="btn-floating waves-effect waves-light red secondary-content" ng-class="{disabled: credit < dish.price}"><i class="material-icons">add</i></a></div>
             </div>
         </li>
@@ -31,7 +31,7 @@
             <div class="row my-menu">
                 <div class="col s3">{{ dessert.name }}</div>
                 <div class="col s3">{{ dessert.price }}</div>
-                <div class="col s3 credit" ng-class="{hidden: credit > dessert.price}">add {{ dessert.price - credit }} credits</div>
+                <div class="col s3 credit" ng-class="{hidden: credit >= dessert.price}">add {{ dessert.price - credit }} credits</div>
                 <div class="col s3"><a href="" ng-click="putOrder(dessert)" class="btn-floating waves-effect waves-light red secondary-content" ng-class="{disabled: credit < dessert.price}"><i class="material-icons">add</i></a></div>
             </div>
         </li>
